# sdcore-smf-k8s-operator

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  charmcraft.yaml  metadata.yaml  pyproject.toml  renovate.json  requirements.in  requirements.txt  test-requirements.in  test-requirements.txt  tox.ini
.github/: dependabot.yml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: 1_4_scheduled_runs.yaml  1_5_scheduled_runs.yaml  codeql-analysis.yml  dependabot_pr.yaml  integration-test.yaml  issues.yaml  lint-report.yaml  main.yaml  promote.yaml  publish-charm.yaml  push.yaml  static-analysis.yaml  tics.yaml  unit-test.yaml  update-libs.yaml
lib/charms/nrf_operator/v0/: nrf.py
lib/charms/sdcore_nms_k8s/v0/: sdcore_config.py
lib/charms/sdcore_nrf/v0/: fiveg_nrf.py
lib/charms/sdcore_nrf_k8s/v0/: fiveg_nrf.py
lib/charms/sdcore_webui_k8s/v0/: sdcore_config.py
lib/charms/tls_certificates_interface/v4/: tls_certificates.py
src/: charm.py  uerouting.yaml
src/prometheus_alert_rules/: smf_down.rule
src/templates/: smf.yaml.j2  smfcfg.yaml.j2
terraform/: README.md  main.tf  outputs.tf  terraform.tf  terraform.tfvars  variables.tf
tests/integration/: conftest.py  test_integration.py
tests/interface/: conftest.py
tests/unit/: certificates_helpers.py  expected_smfcfg.yaml  fixtures.py  test_charm.py  test_charm_certificates_relation_broken.py  test_charm_collect_status.py  test_charm_configure.py
