[project]
name = "sdcore-smf-k8s-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "cosl",
    "cryptography",
    "jinja2",
    "jsonschema",
    "ops",
    "pydantic<3.0",
    "pytest-interface-tester",
    "rpds-py==0.22.3",
]

[dependency-groups]
test = [
    "coverage[toml]",
    "juju>=3.6.1.0",
    "pytest",
    "pytest-operator",
    "pytest-asyncio<0.23",
]
dev = [
    "codespell",
    "pyright",
    "ruff",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.ruff_cache,.coverage"
